fix: change alignment of input items from center to baseline

--- a/src/components/inputs/input/input.scss
+++ b/src/components/inputs/input/input.scss
@@ -5,7 +5,7 @@
 .input {
   display: flex;
   position: relative;
-  align-items: center;
+  align-items: baseline;
   cursor: default;
   user-select: none;
 
